* doc/rtl.texi (Insns): Fix 2 typos.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48784 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-11  Janis Johnson  <janis187@us.ibm.com>
+
+	* doc/rtl.texi (Insns): Fix 2 typos.
+
 2002-01-11  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* doc/invoke.texi: Avoid overfull hboxes.  Add summary of D30V
