--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-11  Janis Johnson  <janis187@us.ibm.com>
 
+	* expr.c (expand_assignment): Fix misuse of MEM_KEEP_ALIAS_SET.
+
+2002-01-11  Janis Johnson  <janis187@us.ibm.com>
+
 	* doc/rtl.texi (Insns): Fix 2 typos.
 
 2002-01-11  Joseph S. Myers  <jsm28@cam.ac.uk>
