--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2001-01-10  Jeff Sturm  <jsturm@one-point.com>
+            Martin Kahlert  <martin.kahlert@infineon.com>
+
+	* jcf-parse.c (get_constant): Don't swap lo/hi for big
+	endian targets when HOST_BITS_PER_WIDE_INT >= 64.
+
 2002-01-03  Graham Stott  <grahams@redhat.com>
 
         * class.c (compile_resource_file): Update copyright date.
