* config/i386/mmintrin.h: New file.         * config/i386/xmmintrin.h: New file.         * config.gcc (i?86-*-*): Add extra_headers.         * simplify-rtx.c (simplify_unary_operation): Handle saturating         truncation codes.         (simplify_binary_operation): Handle saturating arithmetic codes.         * config/i386/i386.c (ix86_expand_sse_comi): Return the full result,         not the lowpart subreg.         (ix86_expand_builtin): Return a TImode dummy register instead of 0         on error.         * config/i386/i386.md (mmx_clrdi): Override memory attribute.
        * gcc.dg/i386-mmx-1.c, gcc.dg/i386-mmx-2.c: New.
        * gcc.dg/i386-sse-1.c, gcc.dg/i386-sse-2.c, gcc.dg/i386-sse-1.c: New.
CVs: ----------------------------------------------------------------------


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48793 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -18947,7 +18947,8 @@
         (unspec:DI [(const_int 0)] 45))]
   "TARGET_MMX"
   "pxor\t{%0, %0|%0, %0}"
-  [(set_attr "type" "mmx")])
+  [(set_attr "type" "mmx")
+   (set_attr "memory" "none")])
 
 (define_insn "mmx_anddi3"
   [(set (match_operand:DI 0 "register_operand" "=y")
