--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,17 @@
+2002-01-11  Richard Henderson  <rth@redhat.com>
+
+	* config/i386/mmintrin.h: New file.
+	* config/i386/xmmintrin.h: New file.
+	* config.gcc (i?86-*-*): Add extra_headers.
+	* simplify-rtx.c (simplify_unary_operation): Handle saturating
+	truncation codes.
+	(simplify_binary_operation): Handle saturating arithmetic codes.
+	* config/i386/i386.c (ix86_expand_sse_comi): Return the full result,
+	not the lowpart subreg.
+	(ix86_expand_builtin): Return a TImode dummy register instead of 0
+	on error.
+	* config/i386/i386.md (mmx_clrdi): Override memory attribute.
+
 2002-01-12  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
 
 	* conflict.c (conflict_graph_compute): Free regsets when finished.
